# mymlops

./: README.md  pyproject.toml
src/mymlops/: commit.py  config.py  config_example.yml  config_schema.json  consts.py  dashboard.html  dashboard.py  gce_create.py  gce_zones.py  idle_shutdown.sh  main.py  start.py  startup_logs.py  status.py  status_server.html  tunnel.py  utils.py
